# Movies

./: .gitignore  DEPLOY.md  LICENSE  README.md  condfig.ini  db.py  deploy.sh  pyproject.toml
movies/: alembic.ini  db.sqlite3
movies/movies/: settings.py  urls.py
movies/moviesapp/: admin.py  db.py  forms.py  models.py  seeds.py  urls.py  utils.py  views.py
movies/moviesapp/alembic/: env.py
movies/moviesapp/migrations/: 0001_initial.py  0002_rename_title_picture_name_record_delete_recode.py  0002_torrentfile_alter_record_picture_record_torrent_file.py  0003_alter_actor_options_alter_picture_options_and_more.py  0003_alter_picture_image_alter_picture_name_and_more.py  0004_alter_record_download_url_alter_record_title.py  0005_alter_picture_image_alter_torrentfile_file_path.py  0006_picture_unique_name_torrentfile_unique_name_and_more.py  0007_alter_record_description.py  0008_screelist_record_screenlist.py  0009_remove_record_screenlist_record_screenlist.py  0010_record_download_count.py  0011_genre.py
movies/moviesapp/static/movies/css/: contact.css  login.css  (+2 more)
movies/moviesapp/templates/moviesapp/: about.html  actor.html  add_movie.html  add_picture.html  base.html  confirm_delete.html  confirm_delete_picture.html  contact.html  error.html  index.html  login.html  movie_detail.html  movie_not_found.html  movies.html  movies_filter.html  picture_detail.html  pictures.html  register.html  screenlist_detail.html  search_results.html  tag_detail.html
movies/static/movies/css/: contact.css  dark.css
movies/static/movies/js/: add_movie.js  dark_theme.js
(+2 files in other folders)
