[tool.poetry]
name = "movies"
version = "0.1.0"
description = "Its project on Django for movies website"
authors = ["Aca9emik"]
license = "GNU License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
sqlalchemy = "^2.0.41"
pillow = "^11.2.1"
alembic = "^1.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
